apps/kbw-productsdisplay/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kbw-productsdisplay
  labels:
    app: kbw-productsdisplay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kbw-productsdisplay
  template:
    metadata:
      labels:
        app: kbw-productsdisplay
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: next
          image: ghcr.io/1spyral/kbw-productsdisplay:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
