apps/kbw-productsdisplay/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kbw-productsdisplay
spec:
  type: ClusterIP
  selector:
    app: kbw-productsdisplay
  ports:
    - name: http
      port: 3000
      targetPort: 3000
